Update and insert prices functionality added